--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "portfolio-react",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "./js/scripts.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "prod": "NODE_ENV=production node server.js",
+    "postinstall": "webpack -p"
   },
   "author": "",
   "license": "ISC",
@@ -13,9 +16,11 @@
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "express": "^4.14.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "webpack": "^1.13.3"
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   },
   "engines": {
     "node": "6.7.0"
